# htmx-story-tutorial

./: README.md
fastopp_site/: .env  README.md  main.py  pyproject.toml  test.db
fastopp_site/routes/: pages.py
fastopp_site/templates/: docs.html  index.html  project.html  tutorials.html  volunteers.html
fastopp_site/templates/partials/: footer.html  header.html
htmx-tutorials/: 3_11m_connect.py  4_11m_connect.py  4_solution.py  fastapi_intro.py  jinja_streaming.py  jinja_streaming_working.py
htmx-tutorials/templates/: 4-llm-stream.html  jinja-streaming-jesse.html  jinja-streaming.html  llm-connect.html
